--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!--==================== HOME ====================-->
             <section class="home container" id="home">
                 <div class="swiper home-swiper">
-                    <div class="swiper swiper-wrapper">
+                    <div class="swiper-wrapper">
                         <section class="swiper-slide">
                             <div class="home__content grid">
                                 <div class="home__group">
