--- a/index.html
+++ b/index.html
@@ -382,13 +382,96 @@
 
             <!--==================== OUR NEWSLETTER ====================-->
             <section class="section newsletter">
-                
+                <div class="newsletter__container container">
+                    <h2 class="section__title">Our Newsletter</h2>
+                    <p class="newsletter__description">Promotion new products and sales. Directly to your inbox.</p>
+
+                    <form action="" class="newsletter__form">
+                        <input type="email" placeholder="Enter your email" class="newsletter__input">
+                        <button class="button">Suscribe</button>
+                    </form>
+                </div>
             </section>
         </main>
 
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
-            
+            <div class="footer__container container grid">
+                <div class="footer__content">
+                    <a href="#" class="footer__logo">
+                        <img src="assets/img/logo.png" alt="Logo" class="footer__logo-img">
+                        Halloween
+                    </a>
+
+                    <p class="footer__description">Enjoy the scariest night <br> or your life.
+                    </p>
+
+                    <div class="footer__social">
+                        <a href="facebook.com" target="_blank" class="footer__social-link">
+                            <i class='bx bxl-facebook'></i>
+                        </a>
+                        <a href="instagram.com" target="_blank" class="footer__social-link">
+                            <i class='bx bxl-instagram-alt'></i>
+                        </a>
+                        <a href="Twitter.com" target="_blank" class="footer__social-link">
+                            <i class='bx bxl-twitter'></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer__content">
+                    <h3 class="footer__title">About</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Features</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">News</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__content">
+                    <h3 class="footer__title">Our Services</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Discounts</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Shipping mode</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__content">
+                    <h3 class="footer__title">Our Company</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Our mision</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <span class="footer__copy">&#169; Dylan C. All rights reserved.</span>
+
+            <img src="assets/img/footer1-img.png" alt="Footer" class="footer__img-one">
+            <img src="assets/img/footer2-img.png" alt="Footer" class="footer__img-two">
         </footer>
 
         <!--=============== SCROLL UP ===============-->
