--- a/index.html
+++ b/index.html
@@ -475,7 +475,9 @@
         </footer>
 
         <!--=============== SCROLL UP ===============-->
-
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class='bx bx-up-arrow-alt scroll__icon'></i>
+        </a>
         
         <!--=============== SCROLL REVEAL ===============-->
         <script src=""></script>
